--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 3.14)
 project (advent_of_code_utilities)
 
 add_library( aoc_utils
+    source/bin_str.cpp
     source/other_aoc_utils.cpp
     source/string_parser.cpp
 )
