Dijkstra's shortest path algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project (advent_of_code_utilities)
 
 add_library( aoc_utils
     source/bin_str.cpp
+    source/dijkstras_shortest_path.cpp
     source/other_aoc_utils.cpp
     source/string_parser.cpp
 )
